--- a/content/posts/fantastic-beasts-and-where-to-find-them/index.mdx
+++ b/content/posts/fantastic-beasts-and-where-to-find-them/index.mdx
@@ -7,7 +7,7 @@ tags:
 
 import SpotifyPlayer from "./SpotifyPlayer";
 
-Here will a React component go:
+Here will a React component go111:
 
 <SpotifyPlayer
   uri="spotify:user:bbcamerica:playlist:3w18u69NplCpXVG4fQG726"
